; ModuleID = '/home/carl/AnghaBench/numpy/numpy/core/src/common/extr_numpyos.c_NumPyOS_ascii_strtod_plain.c'
source_filename = "/home/carl/AnghaBench/numpy/numpy/core/src/common/extr_numpyos.c_NumPyOS_ascii_strtod_plain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NPY_ALLOW_C_API_DEF = common dso_local global i32 0, align 4
@NPY_ALLOW_C_API = common dso_local global i32 0, align 4
@NPY_DISABLE_C_API = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (double (i8*, i8**)* @NumPyOS_ascii_strtod_plain to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @NumPyOS_ascii_strtod_plain(i8* %0, i8** %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8**, align 8
  %5 = alloca double, align 8
  store i8* %0, i8** %3, align 8
  store i8** %1, i8*** %4, align 8
  %6 = load i32, i32* @NPY_ALLOW_C_API_DEF, align 4
  %7 = load i32, i32* @NPY_ALLOW_C_API, align 4
  %8 = load i8*, i8** %3, align 8
  %9 = load i8**, i8*** %4, align 8
  %10 = call double @PyOS_string_to_double(i8* %8, i8** %9, i32* null)
  store double %10, double* %5, align 8
  %11 = call i64 (...) @PyErr_Occurred()
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %21

13:                                               ; preds = %2
  %14 = load i8**, i8*** %4, align 8
  %15 = icmp ne i8** %14, null
  br i1 %15, label %16, label %19

16:                                               ; preds = %13
  %17 = load i8*, i8** %3, align 8
  %18 = load i8**, i8*** %4, align 8
  store i8* %17, i8** %18, align 8
  br label %19

19:                                               ; preds = %16, %13
  %20 = call i32 (...) @PyErr_Clear()
  br label %21

21:                                               ; preds = %19, %2
  %22 = load i32, i32* @NPY_DISABLE_C_API, align 4
  %23 = load double, double* %5, align 8
  ret double %23
}

declare dso_local double @PyOS_string_to_double(i8*, i8**, i32*) #1

declare dso_local i64 @PyErr_Occurred(...) #1

declare dso_local i32 @PyErr_Clear(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
